# MaxScale

Documentation/: Changelog-Enterprise.md  Documentation-Contents.md
Documentation/Release-Notes/: MaxScale_Enterprise-24.02.1.0-Release-Notes.md  MaxScale_Enterprise-24.02.2.0-Release-Notes.md
Documentation/Routers/: Diff.md
cmake/: defaults.cmake  package.cmake  package_deb.cmake  package_rpm.cmake
examples/: roundrobinrouter.cpp
include/maxscale/: backend.hh  filter.hh  router.hh  routing.hh  session.hh  target.hh
include/maxscale/protocol/mariadb/: local_client.hh
maxgui/: package-lock.json  package.json
maxgui/src/utils/sqlLimiter/: getStatements.js  index.js  offset.js  statement.js
maxgui/src/utils/sqlLimiter/__tests__/: sqlLimiter.spec.js
maxguiVue3/src/components/common/__tests__/: UidInput.spec.js
maxutils/maxbase/include/maxbase/: assert.hh  exception.hh
server/core/: backend.cc  gateway.cc  misc.cc  server.cc  service.cc  session.cc
server/core/internal/: server.hh  service.hh
server/modules/filter/: CMakeLists.txt
server/modules/filter/cache/: cachefilter.cc  lrustorage.cc  lrustorage.hh
server/modules/filter/masking/: maskingfilter.cc
server/modules/filter/tee/: teesession.cc
server/modules/filter/test/maxscale/mock/: endpoint.hh
server/modules/filter/wcar/: CMakeLists.txt  cap.cc  capbooststorage.cc  capbooststorage.hh  capconfig.cc  capconfig.hh  capdefs.hh  capfilter.cc  capfilter.hh  capfiltersession.cc  capfiltersession.hh  capinmemorystorage.cc  capinmemorystorage.hh  capquerysort.cc  capquerysort.hh  caprecorder.cc  caprecorder.hh  capsessionstate.cc  capsessionstate.hh  capsqlitestorage.cc  capsqlitestorage.hh  capstorage.hh  meminfo.hh  simtime.hh  wcar.cc  wcar_collector.hh  wcarbooststorage.cc  wcarbooststorage.hh  wcarconfig.cc  wcarconfig.hh  wcarfilter.cc  wcarfilter.hh  wcarfiltersession.cc  wcarfiltersession.hh  wcarinmemorystorage.cc  wcarinmemorystorage.hh  wcarrecorder.cc  wcarrecorder.hh  wcarsqlitestorage.cc  wcarsqlitestorage.hh  (+1 more)
server/modules/filter/wcar/player/: CMakeLists.txt  repbooststorage.cc  repbooststorage.hh  repconfig.cc  repconfig.hh  repconverter.hh  repcsvstorage.cc  repcsvstorage.hh  repplayer.cc  repplayer.hh  repplayermain.cc  reprecorder.cc  reprecorder.hh  repsession.cc  repsession.hh  repshow.cc  repshow.hh  repstorage.hh  reptransform.cc  reptransform.hh  wcarplayer.cc  wcarplayer.hh  wcarplayerconfig.cc  wcarplayerconfig.hh  wcarplayermain.cc  wcarplayersession.cc  wcarplayersession.hh  wcartransform.cc  wcartransform.hh
server/modules/filter/wcar/player/test/: CMakeLists.txt  test_wcar_repstorage.cc
server/modules/filter/wcar/report/: CMakeLists.txt  README.md  WCAR.ipynb  maxpostprocess.in  maxpostprocess.py  maxvisualize.in  notebook_helper.py  prepare_venv.sh.in  requirements-notebook.txt  requirements.txt
server/modules/filter/wcar/test/: CMakeLists.txt  test_wcar_gtid_parsing.cc  test_wcar_storage.cc
server/modules/monitor/mariadbmon/: cluster_manipulation.cc  server_utils.hh
server/modules/protocol/MariaDB/: gtid.cc  local_client.cc  mariadb_client.cc
server/modules/routing/: CMakeLists.txt
server/modules/routing/cat/: cat.cc
server/modules/routing/comparator/: CMakeLists.txt  cbackend.cc  cbackend.hh  ccommands.cc  cconfig.cc  cconfig.hh  cexporter.cc  cexporter.hh  comparator.cc  comparatorbackend.cc  comparatorbackend.hh  comparatorcommands.cc  comparatorcommands.hh  comparatorconfig.cc  comparatorconfig.hh  comparatordefs.hh  comparatorexplainregistry.cc  comparatorexplainregistry.hh  comparatorexporter.cc  comparatorexporter.hh  comparatorregistry.cc  comparatorregistry.hh  comparatorresult.cc  comparatorresult.hh  comparatorround.hh  comparatorrouter.cc  comparatorrouter.hh  comparatorsession.cc  comparatorsession.hh  comparatorstats.cc  comparatorstats.hh  cregistry.cc  cregistry.hh  cresult.cc  cresult.hh  crouter.cc  crouter.hh  croutersession.cc  croutersession.hh  csession.cc  (+12 more)
server/modules/routing/diff/: CMakeLists.txt  diff.cc  diffbackend.cc  diffbackend.hh  diffbinspecs.hh  diffcommands.cc  diffcommands.hh  diffconfig.cc  diffconfig.hh  diffdata.cc  diffdata.hh  diffdefs.hh  diffexporter.cc  diffexporter.hh  diffhistogram.cc  diffhistogram.hh  diffqps.cc  diffqps.hh  diffregistry.cc  diffregistry.hh  diffresult.cc  diffresult.hh  diffrouter.cc  diffrouter.hh  diffroutersession.cc  diffroutersession.hh  diffstats.cc  diffstats.hh  diffutils.cc  diffutils.hh
server/modules/routing/hintrouter/: hintrouter.cc
server/modules/routing/mirror/: mirror.cc
server/modules/routing/pinloki/test/: main.cc
server/modules/routing/readconnroute/: readconnroute.cc
server/modules/routing/readwritesplit/: readwritesplit.cc  readwritesplit.hh  rwsplit_route_stmt.cc  rwsplit_select_backends.cc  rwsplit_session_cmd.cc  rwsplitsession.cc  rwsplitsession.hh
server/modules/routing/schemarouter/: schemarouterinstance.cc
server/modules/routing/smartrouter/: smartsession.cc
server/modules/routing/urat/: CMakeLists.txt  urat.cc  uratbackend.cc  uratbackend.hh  uratcommands.cc  uratcommands.hh  uratconfig.cc  uratconfig.hh  uratdefs.hh  uratexporter.cc  uratexporter.hh  uratresult.hh  uratround.hh  uratrouter.cc  uratrouter.hh  uratsession.cc  uratsession.hh
server/modules/routing/xrouter/: xrouter.cc
system-test/: CMakeLists.txt  sts_combinations.cc
system-test/enterprise/: CMakeLists.txt  enterprise_test.hh
system-test/enterprise/diff/: CMakeLists.txt  diff.hh  diff_basic.cc  diff_test.cc  diff_test.cnf  diff_test_runtime.cc  diff_test_runtime.cnf  diff_test_static.cc  diff_test_static.cnf
system-test/enterprise/wcar/: CMakeLists.txt  wcar.cnf  wcar_basic.cc  wcar_common.hh  wcar_deadlocks.cc  wcar_live_capture.cc  wcar_live_capture.cnf  wcar_short_connections.cc
system-test/maxtest/include/maxtest/: mariadb_nodes.hh  maxrest.hh
system-test/maxtest/src/: galera_cluster.cc  mariadb_nodes.cc
versions/: VERSION2402.cmake
